--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ pip-wheel-metadata/
 # Experiment outputs
 # =========================
 results/
+experiments/runs/
 
 # =========================
 # NVFLARE runtime artifacts
