--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
   "torch>=2.1",
   "torchvision>=0.16",
   "numpy>=1.24, <2.4",
+  "scipy>=1.10",
   "tensorboard>=2.14",
   "tqdm>=4.66",
   "pyyaml>=6.0.1",
