--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ requires = ["hatchling>=1.21"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/flbench"]
+packages = ["src/flbench", "src/tasks", "src/models"]
 
 [tool.ruff]
 line-length = 120
